<resources>
    <string name="app_name">Airflow</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share this app</string>
    <string name="action_rate">Rate this app</string>

    <string name="musicus">Musicus1</string>
    <string name="artist_image">Artist image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="play_icon">Play icon</string>
    <string name="next_icon">Next icon</string>
    <string name="empty_message">Its empty in here. Add a few tracks to get started.</string>
    <string name="version_1_0">Version 1.8</string>
    <string name="about_text">Explore music based on your mood with a lightning fast app and enjoy music.</string>
    <string name="contact_developer">Contact developer </string>
    <string name="email_addr">Email</string>
    <string name="twitter">Twitter</string>
    <string name="airstem">Get airstem</string>
    <string name="buy_coffee_for_developer">Buy coffee for developer</string>
    <string name="support_development_of_airflow_for_android">Support development of airflow for android. PayPal airflow.</string>
    <string name="airflow_powered_by_soundcloud">Airflow powered by SoundCloud</string>
    <string name="checkout_airstem_for_windows_10_a_free_music_search_and_match_engine_for_music_discovery">Checkout airstem for windows 10. A free music search and match engine for music discovery.</string>
    <string name="home">Home</string>
    <string name="setting_more">Settings + More</string>
    <string name="set_airflow_50_based_on_your_region">Set airflow 50 based on your region.</string>
    <string name="you_say_we_play">You say we play</string>
    <string name="play_similar_tracks">Play similar tracks</string>
    <string name="its_empty_here_no_tracks_found_on_this_device">Its empty here. No tracks found on this device.</string>
    <string name="its_empty_in_here_add_a_few_tracks_to_your_library">Its empty in here, add a few tracks to your library</string>
    <string name="its_empty_in_here_add_a_few_playlists_to_get_started">Its empty in here, add a few playlists to get started</string>
    <string name="search_empty_message">It\'s empty in here. Make sure you are connected to internet or search anything else.</string>
    <string name="collection_empty_message">It\'s empty in here. Add a few tracks to get started.</string>
</resources>
