<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.airstem.airflow.ayush.airflow.MainActivity" >

    <item android:id="@+id/action_speech"
        android:title="@string/you_say_we_play"
        android:orderInCategory="100"
        android:icon="@drawable/ic_speak_black"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
